[tool.poetry]
name = "investment-tracker"
version = "0.1.0"
description = "Pulls data from investment broker APIs and pushes it to Notion"
authors = ["bciobo <bogdan@thanksben.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "investment_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}
isort = "^5.12.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120